Fixes font size and distance between elements on mobile based on figma designs

--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ body {
     list-style-type: none;
     align-items: center;
     height: 100%;
+    font-size: 0.875rem;
 }
 
 .preference-controls__item {
@@ -263,7 +264,7 @@ body {
 /* || SEARCH BAR */
 .search-container {
     width: 100%;
-    margin: 1.5rem 0 0 0;
+    margin: 1.5rem 0 1.75rem 0;
 }
 
 .search-bar-container {
@@ -298,7 +299,7 @@ body {
     height: 1.5rem;
     margin: 0.5rem 0 0 0;
     color: var(--coral);
-    display: hidden;
+    display: none;
 }
 
 .error.active {
@@ -532,7 +533,6 @@ body {
 
 .synonym-antonym {
     color: var(--purple);
-    font-size: 0.938rem;
     font-weight: bold;
     text-decoration: none;
 }
